src/test/ui/underscore-imports/hygiene.stderr
error[E0599]: no method named `deref` found for type `&()` in the current scope
  --> $DIR/hygiene.rs:29:11
   |
LL |     (&()).deref();
   |           ^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
LL | use std::ops::Deref;
   |

error[E0599]: no method named `deref_mut` found for type `&mut ()` in the current scope
  --> $DIR/hygiene.rs:30:15
   |
LL |     (&mut ()).deref_mut();
   |               ^^^^^^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope, perhaps add a `use` for it:
   |
LL | use std::ops::DerefMut;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
